BJS-53198: tests